# mtg-json-tools

./: .gitignore  README.md  pyproject.toml  smoke_test.py
.github/workflows/: publish.yml
src/mtgjson_sdk/: __init__.py  async_client.py  cache.py  client.py  config.py  connection.py
src/mtgjson_sdk/models/: sets.py
src/mtgjson_sdk/queries/: __init__.py  prices.py  skus.py
tests/: conftest.py  test_booster.py  test_cache.py  test_cards.py  test_client.py  test_connection_parquet.py  test_identifiers.py  test_legalities.py  test_prices.py  test_sealed.py  test_sets.py  test_sql_builder.py  test_tokens.py
