[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtgjson-sdk"
version = "0.1.0"
description = "DuckDB-backed query client for MTGJSON card data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "duckdb>=1.1.0,<2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
polars = ["polars>=1.0"]
all = ["polars>=1.0", "orjson>=3.9"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/mtgjson_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
